@@ -1,4 +1,7 @@
 
+2009-03-31  8:48 Ali aliov@xfce.org 
+	 * : Bug:Brightness control wasn't getting disabled even if the user disabled it+fix dpms settings changed signal
+
 2009-03-30 21:21 Ali aliov@xfce.org 
 	 * : Added brightness popup+fix in XSyncAlarm error iin idle function+Fix reacration of popup window in the brightness plugin
 
